@@ -1,3 +1,9 @@
+2025-12-27 
+
+- Changed default task from "(default)" to ""
+- Fixed script aborting on missing overlay layer in xml theme file
+- Minor README modifications
+
 2025-11-01
 
 - Allow add/delete/toggle tasks while server is running
